# MLOps-Pipeline-Toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: mlops_ci.yml
examples/: end_to_end.py
mlops_toolkit/: __init__.py  cli.py
mlops_toolkit/cicd/: __init__.py  pipeline.py
mlops_toolkit/data/: __init__.py  versioning.py
mlops_toolkit/deployment/: __init__.py  deploy.py
mlops_toolkit/experiments/: __init__.py  tracking.py
mlops_toolkit/registry/: __init__.py  model_registry.py
tests/: conftest.py  test_cicd.py  test_data.py  test_deployment.py  test_experiments.py  test_registry.py
