[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mlops-pipeline-toolkit"
version = "0.1.0"
description = "A Python toolkit for building and managing MLOps pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["mlops", "mlflow", "dvc", "machine-learning", "deployment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlflow>=2.10.0",
    "dvc>=3.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "scikit-learn>=1.3",
    "ruff>=0.3",
]
examples = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
]

[project.scripts]
mlops = "mlops_toolkit.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["mlops_toolkit"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
